@@ -1,4 +1,4 @@
-DIST ultracopier-0.2.0.9.tar.bz2 348842 RMD160 397e6a4c2117ce2121a6c9cc0cdab999502e5376 SHA1 8bba81bb7ebe5c613041bf9fa256b8ee9562cd4f SHA256 5557b539245de37c9c81f487a56a8887a7413855e52f7e4a2e79c54ecdc119b9
-EBUILD ultracopier-0.2.0.9.ebuild 1212 RMD160 62b3af8e0513c663a0c098351ae95b5c833a66e0 SHA1 1bf122a76dec8b56f5f7fbc941a720f805f91f19 SHA256 7f13506fc1b85ab4c5614b4f2ab0533a818d80c2800aa9862e63e58548a4abf6
-MISC ChangeLog 310 RMD160 4326d0664f5d9463257256fc88e0f9febb0162d6 SHA1 98607d86868cd32f15cd9c25fda8ec7f22c693b0 SHA256 8c52fc984d1bdb20856a4f6ba4735e2c6e34078749923f0c5934038c4236c593
+DIST ultracopier-src-0.2.0.15.tar.bz2 430791 RMD160 e30a43684f548c401af75d197a8cf4001e0f730d SHA1 28794bb2038db85138c2b2fd4bb70b84c6b788fb SHA256 eff1fda5fe3fd3dd7471ff414b9b2ae6a3bbce43f4d56c3dfbb4d1a4ab704c65
+EBUILD ultracopier-0.2.0.15.ebuild 873 RMD160 092dea9ea6ed00cb070f882c8d4d83c94d41a377 SHA1 87a89a7bf6743ba454fbdbaf5189ce8524cba1f9 SHA256 97f88b49d53b1d0f990f81a907dbfda91f1d1cb2cfccef68cc5afca1e3d74177
+MISC ChangeLog 511 RMD160 fa99897daad93e35ecc7554052b0374814ca6f3d SHA1 04546450bdf169176d9030020ccee5762708d604 SHA256 d0b791b089904fb17e68f4d95b237ba0679d88af139e19cc2f4cd1de29c07306
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
