@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/ultracopier
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*ultracopier-0.2.0.15 (05 Jul 2010)
+
+  05 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
+  -ultracopier-0.2.0.9.ebuild, +ultracopier-0.2.0.15.ebuild:
+  Version bump, overall cleanup.
 
   26 Dec 2009; BRULE Herman <alpha_one_x86@first-world.info>
   +ultracopier-0.2.0.9.ebuild, +metadata.xml:
